--- a/gradle/scripts/sonarqube.gradle
+++ b/gradle/scripts/sonarqube.gradle
@@ -5,44 +5,39 @@ sonarqube {
 		property 'sonar.projectName', 'simbench4ie3' // project name
 		property 'sonar.verbose', 'true' // verbose mode
 		property 'sonar.sourceEncoding', 'UTF-8' // encoding
-		//property 'sonar.sources', ['src/main/resources', 'src/main/scala', 'src/main/java'] // src dirs
-		//property "sonar.tests", ['src/test/resources','src/test/java','src/test/scala', 'src/test/groovy'] // test src dirs
+		property 'sonar.sources', ['src/main/resources', 'src/main/scala'] // src dirs
+		property "sonar.tests", ['src/test/resources', 'src/test/scala', 'src/test/groovy'] // test src dirs
 
 		// reports stuff (for all languages)
 		property 'sonar.junit.reportPaths', ['build/test-results/allTests'] // Comma-delimited list of paths to Surefire XML-format reports.
 
 		// unit tests reports dirs
-		//property "sonar.coverage.jacoco.xmlReportsPath", ["build/reports/jacoco/test/jacocoTestReport.xml"] // Comma-separated list of paths to JaCoCo (jacoco.xml) report files.
+		property "sonar.coverage.jacoco.xmlReportsPath", ["build/reports/jacoco/test/jacocoTestReport.xml"] // Comma-separated list of paths to JaCoCo (jacoco.xml) report files.
 		// scapegoat report dir
 		//property "sonar.scala.scapegoat.reportPaths", ["build/reports/scapegoat/src/scapegoat-scalastyle.xml", "build/reports/scapegoat/testsrc/scapegoat-scalastyle.xml"] // Comma-delimited list of paths to Scapegoat reports in the Scalastyle format
 		// spotbugs report dir
-		//property "sonar.java.spotbugs.reportPaths", ["build/reports/spotbugs/main.xml","build/reports/spotbugs/test.xml"] // Comma-delimited list of paths to reports from SpotBugs
-
-		// java specific stuff
-		//property "sonar.java.pmd.reportPaths", ["build/reports/pmd/test.xml","build/reports/pmd/main.xml"] // Comma-delimited list of paths to PMD Apex XML reports
-
+		property "sonar.java.spotbugs.reportPaths", ["build/reports/spotbugs/main.xml","build/reports/spotbugs/test.xml"] // Comma-delimited list of paths to reports from SpotBugs
 
 		// scala specific stuff
 		//property 'sonar.scala.coverage.reportPaths', ''//todo enable when scoverage gradle plugin is available for scala 2.13
 
 		// groovy specific stuff
-		//property 'sonar.groovy.jacoco.reportPath', 'build/jacoco/test.exec' // unit tests reports dir
+		property 'sonar.groovy.jacoco.reportPath', 'build/jacoco/test.exec' // unit tests reports dir
 		/// integration tests reports dir (if any)
-		//property 'sonar.groovy.jacoco.itReportPath', 'build/jacoco/allTests.exec'
-		//property 'sonar.groovy.binaries', 'build/classes/groovy' // groovy binaries
+		property 'sonar.groovy.jacoco.itReportPath', 'build/jacoco/allTests.exec'
+		property 'sonar.groovy.binaries', 'build/classes/groovy' // groovy binaries
 
 		// remove auto generated SimonaConfig file from analysis
-		//property 'sonar.exclusions','SimonaConfig.scala'
-
+		property 'sonar.exclusions','SimbenchConfig.scala'
 	}
 }
 
 // forces sonarqube to execute integration tests
-//project.tasks["sonarqube"].dependsOn "pmdMain"
-//project.tasks["sonarqube"].dependsOn "pmdTest"
-//project.tasks["sonarqube"].dependsOn "spotbugsMain"
-//project.tasks["sonarqube"].dependsOn "spotbugsTest"
-//project.tasks["sonarqube"].dependsOn "allTests"
-//
-//project.tasks["sonarqube"].dependsOn "jacocoTestReport"
-//project.tasks["sonarqube"].dependsOn "jacocoTestCoverageVerification"
+project.tasks["sonarqube"].dependsOn "pmdMain"
+project.tasks["sonarqube"].dependsOn "pmdTest"
+project.tasks["sonarqube"].dependsOn "spotbugsMain"
+project.tasks["sonarqube"].dependsOn "spotbugsTest"
+project.tasks["sonarqube"].dependsOn "allTests"
+
+project.tasks["sonarqube"].dependsOn "jacocoTestReport"
+project.tasks["sonarqube"].dependsOn "jacocoTestCoverageVerification"
