--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,15 @@ apply from: scriptsLocation + 'jacoco.gradle' // jacoco java code coverage
 repositories {
 	jcenter() //searches in bintray's repository 'jCenter', which contains Maven Central
 	maven { url 'https://www.jitpack.io' } // allows github repos as dependencies
-	maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 dependencies {
-	compile 'com.github.ie3-institute:PowerSystemUtils:+' // util functions
+	/* util functions */
+	compile ('com.github.ie3-institute:PowerSystemUtils:1.3+') {
+		/* Exclude nested logging and ie³ related dependencies */
+		exclude group: 'org.slf4j'
+		exclude group: 'com.github.ie3-institute'
+	}
 
 	// logging
 	compile "org.slf4j:slf4j-api:${slf4jVersion}"  // slf4j wrapper
