Adding config parameters for reading csv files

--- a/inputData/config/SimbenchSample.conf
+++ b/inputData/config/SimbenchSample.conf
@@ -3,9 +3,21 @@ io {
   ## 'baseUrl': optional string. Default: http://141.51.193.167/simbench/gui/usecase/download.
   #baseUrl = ?
   
+  ## 'csv': required section.
+  csv {
+    ## 'fileEncoding': optional string. Default: UTF-8.
+    #fileEncoding = ?
+    
+    ## 'fileEnding': optional string. Default: .csv.
+    #fileEnding = ?
+    
+    ## 'separator': required string.
+    separator = ";"
+  }
+  
   ## 'downloadFolder': optional string. Default: inputData/download/.
   #downloadFolder = ?
   
   ## 'simbenchCodes': required list of string.
-  simbenchCodes = ["1-EHVHVMVLV-mixed-all-0-sw", "1-EHVHVMVLV-mixed-all-1-sw"]
+  simbenchCodes = [string, ...]
 }
