--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,18 @@ apply from: scriptsLocation + 'jacoco.gradle' // jacoco java code coverage
 
 repositories {
 	jcenter() //searches in bintray's repository 'jCenter', which contains Maven Central
+	maven { url 'https://oss.sonatype.org/service/local/repositories/snapshots/content' } // For Snapshot artifacts
 	maven { url 'https://www.jitpack.io' } // allows github repos as dependencies
 }
 
 dependencies {
+	/* PowerSystemDataModel */
+	compile ('com.github.ie3-institute:PowerSystemDataModel:0.1-SNAPSHOT') {
+		/* Exclude nested logging and ie³ related dependencies */
+		exclude group: 'org.slf4j'
+		exclude group: 'com.github.ie3-institute'
+	}
+
 	/* util functions */
 	compile ('com.github.ie3-institute:PowerSystemUtils:1.3+') {
 		/* Exclude nested logging and ie³ related dependencies */
