Adding default value for separator

--- a/inputData/config/SimbenchSample.conf
+++ b/inputData/config/SimbenchSample.conf
@@ -11,8 +11,8 @@ io {
     ## 'fileEnding': optional string. Default: .csv.
     #fileEnding = ?
     
-    ## 'separator': required string.
-    separator = ";"
+    ## 'separator': optional string. Default: ;.
+    #separator = ?
   }
   
   ## 'downloadFolder': optional string. Default: inputData/download/.
