--- a/gradle/scripts/tscfg.gradle
+++ b/gradle/scripts/tscfg.gradle
@@ -13,13 +13,17 @@ task genConfigClass {
 		javaexec {
 			main = "-jar"
 			args = [
-					"build/tscfg-${tscfgVersion}.jar",
-					"--spec", "src/main/resources/config-template.conf",
-					"--scala",
-					"--durations",
-					"--pn", "edu.ie3.simbench.config",
-					"--cn", "SimbenchConfig",
-					"--dd", "src/main/scala/edu/ie3/simbench/config/"
+				"build/tscfg-${tscfgVersion}.jar",
+				"--spec",
+				"src/main/resources/config-template.conf",
+				"--scala",
+				"--durations",
+				"--pn",
+				"edu.ie3.simbench.config",
+				"--cn",
+				"SimbenchConfig",
+				"--dd",
+				"src/main/scala/edu/ie3/simbench/config/"
 			]
 		}
 	}
@@ -41,9 +45,11 @@ task genConfigSample {
 		javaexec {
 			main = "-jar"
 			args = [
-					"build/tscfg-${tscfgVersion}.jar",
-					"--spec", "src/main/resources/config-template.conf",
-					"--tpl", "inputData/config/SimbenchSample.conf"
+				"build/tscfg-${tscfgVersion}.jar",
+				"--spec",
+				"src/main/resources/config-template.conf",
+				"--tpl",
+				"inputData/config/SimbenchSample.conf"
 			]
 		}
 	}
