--- a/gradle/scripts/sonarqube.gradle
+++ b/gradle/scripts/sonarqube.gradle
@@ -5,19 +5,25 @@ sonarqube {
 		property 'sonar.projectName', 'simbench4ie3' // project name
 		property 'sonar.verbose', 'true' // verbose mode
 		property 'sonar.sourceEncoding', 'UTF-8' // encoding
-		property 'sonar.sources', ['src/main/resources', 'src/main/scala'] // src dirs
-		property "sonar.tests", ['src/test/resources', 'src/test/scala', 'src/test/groovy'] // test src dirs
-
+		property 'sonar.sources', [
+			'src/main/resources',
+			'src/main/scala'] // src dirs
+		property "sonar.tests", [
+			'src/test/resources',
+			'src/test/scala',
+			'src/test/groovy'] // test src dirs
 		// reports stuff (for all languages)
-		property 'sonar.junit.reportPaths', ['build/test-results/allTests'] // Comma-delimited list of paths to Surefire XML-format reports.
-
+		property 'sonar.junit.reportPaths', [
+			'build/test-results/allTests'] // Comma-delimited list of paths to Surefire XML-format reports.
 		// unit tests reports dirs
-		property "sonar.coverage.jacoco.xmlReportsPath", ["build/reports/jacoco/test/jacocoTestReport.xml"] // Comma-separated list of paths to JaCoCo (jacoco.xml) report files.
+		property "sonar.coverage.jacoco.xmlReportsPath", [
+			"build/reports/jacoco/test/jacocoTestReport.xml"] // Comma-separated list of paths to JaCoCo (jacoco.xml) report files.
 		// scapegoat report dir
 		//property "sonar.scala.scapegoat.reportPaths", ["build/reports/scapegoat/src/scapegoat-scalastyle.xml", "build/reports/scapegoat/testsrc/scapegoat-scalastyle.xml"] // Comma-delimited list of paths to Scapegoat reports in the Scalastyle format
 		// spotbugs report dir
-		property "sonar.java.spotbugs.reportPaths", ["build/reports/spotbugs/main.xml","build/reports/spotbugs/test.xml"] // Comma-delimited list of paths to reports from SpotBugs
-
+		property "sonar.java.spotbugs.reportPaths", [
+			"build/reports/spotbugs/main.xml",
+			"build/reports/spotbugs/test.xml"] // Comma-delimited list of paths to reports from SpotBugs
 		// scala specific stuff
 		//property 'sonar.scala.coverage.reportPaths', ''//todo enable when scoverage gradle plugin is available for scala 2.13
 
