--- a/gradle/scripts/tests.gradle
+++ b/gradle/scripts/tests.gradle
@@ -1,14 +1,13 @@
-test {
-	// by default we don't want to run integration tests
-	filter {
-		excludeTestsMatching '*IT'
-	}
-}
-
 // Task to run scala tests, as Scala tests are not picked up by gradle by default
 task spec(dependsOn: ['testClasses'], type: JavaExec) {
 	main = 'org.scalatest.tools.Runner'
-	args = ['-R', 'build/classes/scala/test', '-h', 'build/reports/tests/scalatest', '-oD']
+	args = [
+		'-R',
+		'build/classes/scala/test',
+		'-h',
+		'build/reports/tests/scalatest',
+		'-oD'
+	]
 	classpath = sourceSets.test.runtimeClasspath
 }
 build.dependsOn spec
@@ -21,16 +20,9 @@ task integrationTest(type: Test) {
 	}
 	mustRunAfter test
 }
-integrationTest.dependsOn(test)
 
 task allTests(type: Test) {
 	description 'executes all tests'
-	filter {
-		includeTestsMatching '*Test*.*'
-		includeTestsMatching '*IT'
-	}
-	mustRunAfter test
 	mustRunAfter spec
 }
-allTests.dependsOn(test)
 allTests.dependsOn(spec)
