--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-	id "com.jfrog.artifactory" version "4.9.7"
+	id "com.jfrog.artifactory" version "4.13.0"
 	id 'groovy' // groovy support
 	id 'java' // java support
 	id 'scala' // scala support
 	id 'maven-publish' // publish to a maven repo (local or mvn central, has to be defined)
 	id 'pmd' // code check, working on source code
-	id 'com.github.spotbugs' version '2.0.0' // code check, working on byte code
 	id 'com.diffplug.gradle.spotless' version '3.28.1'// code format
+	id 'com.github.spotbugs' version '2.0.0' // code check, working on byte code
 	id "de.undercouch.download" version "3.4.3" // downloads plugin
 	id 'jacoco' // java code coverage plugin
 	id "org.sonarqube" version "2.8" // sonarqube
@@ -18,6 +18,7 @@ ext {
 
 	unitsOfMeasurementVersion = '1.0.10'
 	scalaVersion = '2.13'
+	scalaBinaryVersion = '2.13.1'
 	tscfgVersion = '0.9.96'
 	slf4jVersion = '1.7.26'
 
@@ -36,6 +37,10 @@ apply from: scriptsLocation + 'sonarqube.gradle'
 apply from: scriptsLocation + 'checkJavaVersion.gradle'
 apply from: scriptsLocation + 'tscfg.gradle' // config tasks
 apply from: scriptsLocation + 'jacoco.gradle' // jacoco java code coverage
+
+configurations {
+	scalaCompilerPlugin
+}
 
 repositories {
 	jcenter() //searches in bintray's repository 'jCenter', which contains Maven Central
@@ -90,6 +95,32 @@ dependencies {
 
 	/* Handling compressed archives */
 	compile "org.apache.commons:commons-compress:+"
+
+	/* Scala code quality */
+	compile "com.sksamuel.scapegoat:scalac-scapegoat-plugin_${scalaBinaryVersion}:1.4.4" // scala scapegoat
+	scalaCompilerPlugin "com.sksamuel.scapegoat:scalac-scapegoat-plugin_${scalaBinaryVersion}:1.4.4" // scala scapegoat
+}
+
+// scapegoat hook configuration
+// https://github.com/sksamuel/scapegoat
+// using compileScala instead of tasks.withType(ScalaCompile) prevents applying scapegoat to scala test classes
+// see https://docs.gradle.org/current/userguide/scala_plugin.html#sec:configure_scala_classpath for details
+compileScala {
+	scalaCompileOptions.additionalParameters = [
+		"-Xplugin:" + configurations.scalaCompilerPlugin.asPath,
+		"-P:scapegoat:dataDir:" + buildDir + "/reports/scapegoat/src/",
+		"-P:scapegoat:disabledInspections:VariableShadowing",
+		"-P:scapegoat:ignoredFiles:.*SimbenchConfig\\.scala" // Regex matching all files to ignore
+	]
+}
+
+// separate scapegoat report for test classes
+compileTestScala {
+	scalaCompileOptions.additionalParameters = [
+		"-Xplugin:" + configurations.scalaCompilerPlugin.asPath,
+		"-P:scapegoat:dataDir:" + buildDir + "/reports/scapegoat/testsrc/",
+		"-P:scapegoat:disabledInspections:VariableShadowing"
+	]
 }
 
 wrapper {
