--- a/gradle/scripts/sonarqube.gradle
+++ b/gradle/scripts/sonarqube.gradle
@@ -10,8 +10,7 @@ sonarqube {
 			'src/main/scala'] // src dirs
 		property "sonar.tests", [
 			'src/test/resources',
-			'src/test/scala',
-			'src/test/groovy'] // test src dirs
+			'src/test/scala'] // test src dirs
 		// reports stuff (for all languages)
 		property 'sonar.junit.reportPaths', [
 			'build/test-results/allTests'] // Comma-delimited list of paths to Surefire XML-format reports.
@@ -19,7 +18,9 @@ sonarqube {
 		property "sonar.coverage.jacoco.xmlReportsPath", [
 			"build/reports/jacoco/test/jacocoTestReport.xml"] // Comma-separated list of paths to JaCoCo (jacoco.xml) report files.
 		// scapegoat report dir
-		//property "sonar.scala.scapegoat.reportPaths", ["build/reports/scapegoat/src/scapegoat-scalastyle.xml", "build/reports/scapegoat/testsrc/scapegoat-scalastyle.xml"] // Comma-delimited list of paths to Scapegoat reports in the Scalastyle format
+		property "sonar.scala.scapegoat.reportPaths", [
+			"build/reports/scapegoat/src/scapegoat-scalastyle.xml",
+			"build/reports/scapegoat/testsrc/scapegoat-scalastyle.xml"] // Comma-delimited list of paths to Scapegoat reports in the Scalastyle format
 		// spotbugs report dir
 		property "sonar.java.spotbugs.reportPaths", [
 			"build/reports/spotbugs/main.xml",
