Adapt to new release of scoverage

--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ plugins {
 	id 'scala' // scala support
 	id 'maven-publish' // publish to a maven repo (local or mvn central, has to be defined)
 	id 'pmd' // code check, working on source code
-	id 'com.github.spotbugs' version '2.0.0' // code check, working on byte code
 	id 'com.diffplug.gradle.spotless' version '3.28.1'// code format
 	id "de.undercouch.download" version "3.4.3" // downloads plugin
 	id 'jacoco' // java code coverage plugin
 	id "org.sonarqube" version "2.8" // sonarqube
-	id 'org.scoverage' version '4.0.1' // Code coverage plugin for scala
+	id 'org.scoverage' version '4.0.2' // Code coverage plugin for scala
+	id "com.github.maiflai.scalatest" version "0.26" // run scalatest without specific task
 }
 
 ext {
@@ -31,11 +31,9 @@ version = '1.0-SNAPSHOT'
 
 apply from: scriptsLocation + 'tests.gradle'
 apply from: scriptsLocation + 'pmd.gradle'
-apply from: scriptsLocation + 'spotbugs.gradle'
 apply from: scriptsLocation + 'spotless.gradle'
 apply from: scriptsLocation + 'checkJavaVersion.gradle'
 apply from: scriptsLocation + 'tscfg.gradle' // config tasks
-apply from: scriptsLocation + 'jacoco.gradle' // jacoco java code coverage
 apply from: scriptsLocation + 'scoverage.gradle'
 
 repositories {
