--- a/gradle/scripts/tests.gradle
+++ b/gradle/scripts/tests.gradle
@@ -1,17 +1,3 @@
-// Task to run scala tests, as Scala tests are not picked up by gradle by default
-task spec(dependsOn: ['testClasses'], type: JavaExec) {
-	main = 'org.scalatest.tools.Runner'
-	args = [
-		'-R',
-		'build/classes/scala/test',
-		'-h',
-		'build/reports/tests/scalatest',
-		'-oD'
-	]
-	classpath = sourceSets.test.runtimeClasspath
-}
-build.dependsOn spec
-
 task integrationTest(type: Test) {
 	description 'executes only the integration tests'
 	filter {
@@ -21,8 +7,4 @@ task integrationTest(type: Test) {
 	mustRunAfter test
 }
 
-task allTests(type: Test) {
-	description 'executes all tests'
-	mustRunAfter spec
-}
-allTests.dependsOn(spec)
+check.dependsOn(scalatest)
