Neglect integration tests, as there are none available, yet.

--- a/gradle/scripts/tests.gradle
+++ b/gradle/scripts/tests.gradle
@@ -1,10 +1,11 @@
-task integrationTest(type: Test) {
-	description 'executes only the integration tests'
-	filter {
-		excludeTestsMatching '*Test*.*'
-		includeTestsMatching '*IT'
-	}
-	mustRunAfter test
-}
+// Currently there are no integration tests
+//task integrationTest(type: Test) {
+//	description 'executes only the integration tests'
+//	filter {
+//		excludeTestsMatching '*Test*.*'
+//		includeTestsMatching '*IT'
+//	}
+//	mustRunAfter test
+//}
 
 check.dependsOn(scalatest)
