--- a/build.gradle
+++ b/build.gradle
@@ -47,14 +47,14 @@ repositories {
 dependencies {
 	/* PowerSystemDataModel */
 	compile ('com.github.ie3-institute:PowerSystemDataModel:1.1-SNAPSHOT') {
-		/* Exclude nested logging and ie³ related dependencies */
+		/* Exclude nested logging and ie3 related dependencies */
 		exclude group: 'org.slf4j', module: 'slf4j-api'
 		exclude group: 'com.github.ie3-institute'
 	}
 
 	/* util functions */
 	compile ('com.github.ie3-institute:PowerSystemUtils:1.3.1') {
-		/* Exclude nested logging and ie³ related dependencies */
+		/* Exclude nested logging and ie3 related dependencies */
 		exclude group: 'org.slf4j', module: 'slf4j-api'
 		exclude group: 'com.github.ie3-institute'
 	}
