--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,6 @@ testData/download
 !testData/download/1-LV-rural1--0-no_sw.zip
 !testData/download/targetFolderExistsAndIsFile
 !testData/download/targetFolderExistsAndIsFile.zip
+
+# Downloader productive folder
+inputData/download
