Adding config parameters for output

--- a/inputData/config/SimbenchSample.conf
+++ b/inputData/config/SimbenchSample.conf
@@ -3,20 +3,41 @@ io {
   ## 'baseUrl': optional string. Default: http://141.51.193.167/simbench/gui/usecase/download.
   #baseUrl = ?
   
-  ## 'csv': required section.
-  csv {
-    ## 'fileEncoding': optional string. Default: UTF-8.
-    #fileEncoding = ?
-    
-    ## 'fileEnding': optional string. Default: .csv.
-    #fileEnding = ?
-    
-    ## 'separator': optional string. Default: ;.
-    #separator = ?
-  }
-  
   ## 'downloadFolder': optional string. Default: inputData/download/.
   #downloadFolder = ?
+  
+  ## 'input': required section.
+  input {
+    ## 'csv': required ref to object.
+    csv = {
+      ## 'fileEncoding': optional string. Default: UTF-8.
+      #fileEncoding = ?
+
+      ## 'fileEnding': optional string. Default: .csv.
+      #fileEnding = ?
+
+      ## 'separator': optional string. Default: ;.
+      #separator = ?
+    }
+  }
+  
+  ## 'output': required section.
+  output {
+    ## 'csv': required ref to object.
+    csv = {
+      ## 'fileEncoding': optional string. Default: UTF-8.
+      #fileEncoding = ?
+
+      ## 'fileEnding': optional string. Default: .csv.
+      #fileEnding = ?
+
+      ## 'separator': optional string. Default: ;.
+      #separator = ?
+    }
+    
+    ## 'targetFolder': optional string. Default: convertedData.
+    #targetFolder = ?
+  }
   
   ## 'simbenchCodes': required list of string.
   simbenchCodes = [string, ...]
