--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -1,6 +1,13 @@
+#@define
+CsvConfig {
+  separator = "String" | ";"
+  fileEnding = "String" | ".csv"
+  fileEncoding = "String" | "UTF-8"
+}
+
 io.simbenchCodes = ["String"]
 io.downloadFolder = "String" | "inputData/download/"
 io.baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
-io.csv.separator = "String" | ";"
-io.csv.fileEnding = "String" | ".csv"
-io.csv.fileEncoding = "String" | "UTF-8"
+io.input.csv = CsvConfig
+io.output.csv = CsvConfig
+io.output.targetFolder = "String" | "convertedData"
