--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,9 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
+# Ignore csv files in general (output iof the algorithm)
+**.csv
+
 # Downloader test folder
 testData/download
 !testData/download/1-LV-rural1--0-no_sw.zip
