Clarifying purpose of configs

--- a/inputData/config/smallGrid.conf
+++ b/inputData/config/smallGrid.conf
@@ -1,4 +1,4 @@
-# Simple config to convert all extra high voltage grids
+# Simple config to convert only one simple lv grid
 io {
   input {
     csv = {
