--- a/inputData/config/singleVoltLvlNoSwitches.conf
+++ b/inputData/config/singleVoltLvlNoSwitches.conf
@@ -1,4 +1,4 @@
-# Simple config to convert all extra high voltage grids
+# Simple config to convert all data sets with one voltage level only and without switches and dc lines
 io {
   input {
     csv = {
@@ -19,35 +19,35 @@ io {
   }
   
   simbenchCodes = [
-    #"1-EHV-mixed--0-no_sw",
+    "1-EHV-mixed--0-no_sw",
     #"1-EHV-mixed--1-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
     #"1-EHV-mixed--2-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
-    #"1-HV-mixed--0-no_sw",
-    #"1-HV-mixed--1-no_sw",
-    #"1-HV-mixed--2-no_sw",
-    #"1-HV-urban--0-no_sw",
-    #"1-HV-urban--1-no_sw",
-    #"1-HV-urban--2-no_sw",
-    #"1-LV-rural1--0-no_sw",
-    #"1-LV-rural1--1-no_sw",
-    #"1-LV-rural1--2-no_sw",
-    #"1-LV-rural2--0-no_sw",
-    #"1-LV-rural2--1-no_sw",
-    #"1-LV-rural2--2-no_sw",
-    #"1-LV-rural3--0-no_sw",
-    #"1-LV-rural3--1-no_sw",
-    #"1-LV-rural3--2-no_sw",
-    #"1-LV-semiurb4--0-no_sw",
-    #"1-LV-semiurb4--1-no_sw",
-    #"1-LV-semiurb4--2-no_sw",
-    #"1-LV-semiurb5--0-no_sw",
-    #"1-LV-semiurb5--1-no_sw",
-    #"1-LV-semiurb5--2-no_sw",
-    #"1-LV-urban6--0-no_sw",
-    #"1-LV-urban6--1-no_sw",
-    #"1-LV-urban6--2-no_sw",
-    #"1-MV-comm--0-no_sw",
-    #"1-MV-comm--1-no_sw",
+    "1-HV-mixed--0-no_sw",
+    "1-HV-mixed--1-no_sw",
+    "1-HV-mixed--2-no_sw",
+    "1-HV-urban--0-no_sw",
+    "1-HV-urban--1-no_sw",
+    "1-HV-urban--2-no_sw",
+    "1-LV-rural1--0-no_sw",
+    "1-LV-rural1--1-no_sw",
+    "1-LV-rural1--2-no_sw",
+    "1-LV-rural2--0-no_sw",
+    "1-LV-rural2--1-no_sw",
+    "1-LV-rural2--2-no_sw",
+    "1-LV-rural3--0-no_sw",
+    "1-LV-rural3--1-no_sw",
+    "1-LV-rural3--2-no_sw",
+    "1-LV-semiurb4--0-no_sw",
+    "1-LV-semiurb4--1-no_sw",
+    "1-LV-semiurb4--2-no_sw",
+    "1-LV-semiurb5--0-no_sw",
+    "1-LV-semiurb5--1-no_sw",
+    "1-LV-semiurb5--2-no_sw",
+    "1-LV-urban6--0-no_sw",
+    "1-LV-urban6--1-no_sw",
+    "1-LV-urban6--2-no_sw",
+    "1-MV-comm--0-no_sw",
+    "1-MV-comm--1-no_sw",
     "1-MV-comm--2-no_sw",
     "1-MV-rural--0-no_sw",
     "1-MV-rural--1-no_sw",
