--- a/inputData/config/allNoSwitches.conf
+++ b/inputData/config/allNoSwitches.conf
@@ -22,42 +22,42 @@ io {
     #"1-complete_data-mixed-all-0-no_sw", -- corrupt archive file
     #"1-complete_data-mixed-all-1-no_sw", -- corrupt archive file
     #"1-complete_data-mixed-all-2-no_sw", -- corrupt archive file
-    #"1-EHVHV-mixed-1-0-no_sw",
+    "1-EHVHV-mixed-1-0-no_sw",
     #"1-EHVHV-mixed-1-1-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
     #"1-EHVHV-mixed-1-2-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
-    #"1-EHVHV-mixed-2-0-no_sw",
+    "1-EHVHV-mixed-2-0-no_sw",
     #"1-EHVHV-mixed-2-1-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
     #"1-EHVHV-mixed-2-2-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
-    #"1-EHVHV-mixed-all-0-no_sw",
+    "1-EHVHV-mixed-all-0-no_sw",
     #"1-EHVHV-mixed-all-1-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
     #"1-EHVHV-mixed-all-2-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
     #"1-EHVHVMVLV-mixed-all-0-no_sw", -- corrupt archive file
     #"1-EHVHVMVLV-mixed-all-1-no_sw", -- corrupt archive file
     #"1-EHVHVMVLV-mixed-all-2-no_sw", -- corrupt archive file
-    #"1-HVMV-mixed-1.105-0-no_sw",
-    #"1-HVMV-mixed-1.105-1-no_sw",
-    #"1-HVMV-mixed-1.105-2-no_sw",
-    #"1-HVMV-mixed-2.102-0-no_sw",
-    #"1-HVMV-mixed-2.102-1-no_sw",
-    #"1-HVMV-mixed-2.102-2-no_sw",
-    #"1-HVMV-mixed-4.101-0-no_sw",
-    #"1-HVMV-mixed-4.101-1-no_sw",
-    #"1-HVMV-mixed-4.101-2-no_sw",
-    #"1-HVMV-mixed-all-0-no_sw",
-    #"1-HVMV-mixed-all-1-no_sw",
-    #"1-HVMV-mixed-all-2-no_sw",
-    #"1-HVMV-urban-2.203-0-no_sw",
-    #"1-HVMV-urban-2.203-1-no_sw",
-    #"1-HVMV-urban-2.203-2-no_sw",
-    #"1-HVMV-urban-3.201-0-no_sw",
-    #"1-HVMV-urban-3.201-1-no_sw",
-    #"1-HVMV-urban-3.201-2-no_sw",
-    #"1-HVMV-urban-4.201-0-no_sw",
-    #"1-HVMV-urban-4.201-1-no_sw",
+    "1-HVMV-mixed-1.105-0-no_sw",
+    "1-HVMV-mixed-1.105-1-no_sw",
+    "1-HVMV-mixed-1.105-2-no_sw",
+    "1-HVMV-mixed-2.102-0-no_sw",
+    "1-HVMV-mixed-2.102-1-no_sw",
+    "1-HVMV-mixed-2.102-2-no_sw",
+    "1-HVMV-mixed-4.101-0-no_sw",
+    "1-HVMV-mixed-4.101-1-no_sw",
+    "1-HVMV-mixed-4.101-2-no_sw",
+    #"1-HVMV-mixed-all-0-no_sw", -- Causes memory issues at the moment
+    #"1-HVMV-mixed-all-1-no_sw", -- Causes memory issues at the moment
+    #"1-HVMV-mixed-all-2-no_sw", -- Causes memory issues at the moment
+    "1-HVMV-urban-2.203-0-no_sw",
+    "1-HVMV-urban-2.203-1-no_sw",
+    "1-HVMV-urban-2.203-2-no_sw",
+    "1-HVMV-urban-3.201-0-no_sw",
+    "1-HVMV-urban-3.201-1-no_sw",
+    "1-HVMV-urban-3.201-2-no_sw",
+    "1-HVMV-urban-4.201-0-no_sw",
+    "1-HVMV-urban-4.201-1-no_sw",
     "1-HVMV-urban-4.201-2-no_sw",
-    #"1-HVMV-urban-all-0-no_sw",
-    #"1-HVMV-urban-all-1-no_sw",
-    #"1-HVMV-urban-all-2-no_sw",
+    #"1-HVMV-urban-all-0-no_sw", -- Causes memory issues at the moment
+    #"1-HVMV-urban-all-1-no_sw", -- Causes memory issues at the moment
+    #"1-HVMV-urban-all-2-no_sw", -- Causes memory issues at the moment
     "1-MVLV-comm-3.403-0-no_sw",
     "1-MVLV-comm-3.403-1-no_sw",
     "1-MVLV-comm-3.403-2-no_sw",
@@ -67,9 +67,9 @@ io {
     "1-MVLV-comm-5.401-0-no_sw",
     "1-MVLV-comm-5.401-1-no_sw",
     "1-MVLV-comm-5.401-2-no_sw",
-    #"1-MVLV-comm-all-0-no_sw",
-    #"1-MVLV-comm-all-1-no_sw",
-    #"1-MVLV-comm-all-2-no_sw",
+    #"1-MVLV-comm-all-0-no_sw", -- Causes memory issues at the moment
+    #"1-MVLV-comm-all-1-no_sw", -- Causes memory issues at the moment
+    #"1-MVLV-comm-all-2-no_sw", -- Causes memory issues at the moment
     "1-MVLV-rural-1.108-0-no_sw",
     "1-MVLV-rural-1.108-1-no_sw",
     "1-MVLV-rural-1.108-2-no_sw",
@@ -78,11 +78,10 @@ io {
     "1-MVLV-rural-2.107-2-no_sw",
     "1-MVLV-rural-4.101-0-no_sw",
     "1-MVLV-rural-4.101-1-no_sw",
-    "1-MVLV-rural-4.101-1-no_sw",
     "1-MVLV-rural-4.101-2-no_sw",
-    #"1-MVLV-rural-all-0-no_sw",
-    #"1-MVLV-rural-all-1-no_sw",
-    #"1-MVLV-rural-all-2-no_sw",
+    #"1-MVLV-rural-all-0-no_sw", -- Causes memory issues at the moment
+    #"1-MVLV-rural-all-1-no_sw", -- Causes memory issues at the moment
+    #"1-MVLV-rural-all-2-no_sw", -- Causes memory issues at the moment
     "1-MVLV-semiurb-3.202-0-no_sw",
     "1-MVLV-semiurb-3.202-1-no_sw",
     "1-MVLV-semiurb-3.202-2-no_sw",
@@ -92,9 +91,9 @@ io {
     "1-MVLV-semiurb-5.220-0-no_sw",
     "1-MVLV-semiurb-5.220-1-no_sw",
     "1-MVLV-semiurb-5.220-2-no_sw",
-    #"1-MVLV-semiurb-all-0-no_sw",
-    #"1-MVLV-semiurb-all-1-no_sw",
-    #"1-MVLV-semiurb-all-2-no_sw",
+    #"1-MVLV-semiurb-all-0-no_sw", -- Causes memory issues at the moment
+    #"1-MVLV-semiurb-all-1-no_sw", -- Causes memory issues at the moment
+    #"1-MVLV-semiurb-all-2-no_sw", -- Causes memory issues at the moment
     "1-MVLV-urban-5.303-0-no_sw",
     "1-MVLV-urban-5.303-1-no_sw",
     "1-MVLV-urban-5.303-2-no_sw",
@@ -104,9 +103,9 @@ io {
     "1-MVLV-urban-6.309-0-no_sw",
     "1-MVLV-urban-6.309-1-no_sw",
     "1-MVLV-urban-6.309-2-no_sw",
-    #"1-MVLV-urban-all-0-no_sw",
-    #"1-MVLV-urban-all-1-no_sw",
-    #"1-MVLV-urban-all-2-no_sw",
+    #"1-MVLV-urban-all-0-no_sw", -- Causes memory issues at the moment
+    #"1-MVLV-urban-all-1-no_sw", -- Causes memory issues at the moment
+    #"1-MVLV-urban-all-2-no_sw", -- Causes memory issues at the moment
     "1-EHV-mixed--0-no_sw",
     #"1-EHV-mixed--1-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
     #"1-EHV-mixed--2-no_sw", -- excluded due to dc lines not being covered by PowerSystemDataModel
