--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,9 @@ dependencies {
 
 	/* Handling compressed archives */
 	compile "org.apache.commons:commons-compress:+"
+
+	/* Using the Stream API */
+	compile "com.typesafe.akka:akka-stream_2.13:2.6.8"
 }
 
 wrapper {
