--- a/inputData/config/singleVoltLvlNoSwitches.conf
+++ b/inputData/config/singleVoltLvlNoSwitches.conf
@@ -37,26 +37,26 @@ io {
     "1-LV-rural3--0-no_sw",
     "1-LV-rural3--1-no_sw",
     "1-LV-rural3--2-no_sw",
-    "1-LV-semiurb4--0-no_sw",
-    "1-LV-semiurb4--1-no_sw",
-    "1-LV-semiurb4--2-no_sw",
-    "1-LV-semiurb5--0-no_sw",
-    "1-LV-semiurb5--1-no_sw",
-    "1-LV-semiurb5--2-no_sw",
-    "1-LV-urban6--0-no_sw",
-    "1-LV-urban6--1-no_sw",
-    "1-LV-urban6--2-no_sw",
-    "1-MV-comm--0-no_sw",
-    "1-MV-comm--1-no_sw",
-    "1-MV-comm--2-no_sw",
-    "1-MV-rural--0-no_sw",
-    "1-MV-rural--1-no_sw",
-    "1-MV-rural--2-no_sw",
-    "1-MV-semiurb--0-no_sw",
-    "1-MV-semiurb--1-no_sw",
-    "1-MV-semiurb--2-no_sw",
-    "1-MV-urban--0-no_sw",
-    "1-MV-urban--1-no_sw",
-    "1-MV-urban--2-no_sw"
+//    "1-LV-semiurb4--0-no_sw",
+//    "1-LV-semiurb4--1-no_sw",
+//    "1-LV-semiurb4--2-no_sw",
+//    "1-LV-semiurb5--0-no_sw",
+//    "1-LV-semiurb5--1-no_sw",
+//    "1-LV-semiurb5--2-no_sw",
+//    "1-LV-urban6--0-no_sw",
+//    "1-LV-urban6--1-no_sw",
+//    "1-LV-urban6--2-no_sw",
+//    "1-MV-comm--0-no_sw",
+//    "1-MV-comm--1-no_sw",
+//    "1-MV-comm--2-no_sw",
+//    "1-MV-rural--0-no_sw",
+//    "1-MV-rural--1-no_sw",
+//    "1-MV-rural--2-no_sw",
+//    "1-MV-semiurb--0-no_sw",
+//    "1-MV-semiurb--1-no_sw",
+//    "1-MV-semiurb--2-no_sw",
+//    "1-MV-urban--0-no_sw",
+//    "1-MV-urban--1-no_sw",
+//    "1-MV-urban--2-no_sw"
   ]
 }
