Adding config parameter to toggle between failing on already existing download file or not

--- a/inputData/config/SimbenchSample.conf
+++ b/inputData/config/SimbenchSample.conf
@@ -1,3 +1,15 @@
+## 'CsvConfig': required section.
+CsvConfig {
+  ## 'fileEncoding': optional string. Default: UTF-8.
+  #fileEncoding = ?
+  
+  ## 'fileEnding': optional string. Default: .csv.
+  #fileEnding = ?
+  
+  ## 'separator': optional string. Default: ;.
+  #separator = ?
+}
+
 ## 'io': required section.
 io {
   ## 'baseUrl': optional string. Default: http://141.51.193.167/simbench/gui/usecase/download.
@@ -9,31 +21,22 @@ io {
   ## 'input': required section.
   input {
     ## 'csv': required ref to object.
-    csv = {
-      ## 'fileEncoding': optional string. Default: UTF-8.
-      #fileEncoding = ?
-
-      ## 'fileEnding': optional string. Default: .csv.
-      #fileEnding = ?
-
-      ## 'separator': optional string. Default: ;.
-      #separator = ?
+    csv = ?
+    
+    ## 'download': required section.
+    download {
+      ## 'failOnExistingFiles': optional boolean. Default: false.
+      #failOnExistingFiles = ?
+      
+      ## 'folder': optional string. Default: inputData/download/.
+      #folder = ?
     }
   }
   
   ## 'output': required section.
   output {
     ## 'csv': required ref to object.
-    csv = {
-      ## 'fileEncoding': optional string. Default: UTF-8.
-      #fileEncoding = ?
-
-      ## 'fileEnding': optional string. Default: .csv.
-      #fileEnding = ?
-
-      ## 'separator': optional string. Default: ;.
-      #separator = ?
-    }
+    csv = ?
     
     ## 'targetFolder': optional string. Default: convertedData.
     #targetFolder = ?
