--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -6,9 +6,8 @@ CsvConfig {
 }
 
 io.simbenchCodes = ["String"]
-io.downloadFolder = "String" | "inputData/download/"
-io.baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
 io.input {
+  download.baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
   download.folder = "String" | "inputData/download/"
   download.failOnExistingFiles = "Boolean" | false
   csv = CsvConfig
