Adding further options to control output behaviour

--- a/inputData/config/singleVoltLvlNoSwitches.conf
+++ b/inputData/config/singleVoltLvlNoSwitches.conf
@@ -5,6 +5,7 @@ io {
       fileEncoding = "UTF-8"
       fileEnding = ".csv"
       separator = ";"
+      directoryHierarchy = false
     }
   }
   
@@ -13,9 +14,11 @@ io {
       fileEncoding = "UTF-8"
       fileEnding = ".csv"
       separator = ";"
+      directoryHierarchy = false
     }
 
     targetFolder = "convertedData/singleVoltLvlNoSwitches"
+    compress = true
   }
   
   simbenchCodes = [
