--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -3,6 +3,7 @@ CsvConfig {
   separator = "String" | ";"
   fileEnding = "String" | ".csv"
   fileEncoding = "String" | "UTF-8"
+  directoryHierarchy = "Boolean" | false
 }
 
 io.simbenchCodes = ["String"]
@@ -14,3 +15,4 @@ io.input {
 }
 io.output.csv = CsvConfig
 io.output.targetFolder = "String" | "convertedData"
+io.output.compress = "Boolean" | true
