Adapting class name for directory hierarchy

--- a/inputData/config/smallGrid.conf
+++ b/inputData/config/smallGrid.conf
@@ -14,11 +14,11 @@ io {
       fileEncoding = "UTF-8"
       fileEnding = ".csv"
       separator = ";"
-      directoryHierarchy = false
+      directoryHierarchy = true
     }
 
     targetFolder = "convertedData/smallGrid"
-    compress = true
+    compress = false
   }
   
   simbenchCodes = [
