--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ repositories {
 
 dependencies {
 	/* PowerSystemDataModel */
-	implementation ('com.github.ie3-institute:PowerSystemDataModel:2.0.1') {
+	implementation ('com.github.ie3-institute:PowerSystemDataModel:2.1-SNAPSHOT') {
 		/* Exclude nested logging and ie3 related dependencies */
 		exclude group: 'org.slf4j', module: 'slf4j-api'
 		exclude group: 'com.github.ie3-institute'
