--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,4 +17,5 @@ updates:
         versions:
           - ">= 1.5.a, < 1.6"
       - dependency-name: org.scalatest:scalatest_2.13
+        versions:
           - "3.3.0-SNAP3"
