--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ ext {
 
 group = 'com.github.ie3-institute'
 description = 'simbench4ie3'
-version = '1.0'
+version = '1.1-SNAPSHOT'
 sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
 
