Make switch removal configurable

--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -6,13 +6,20 @@ CsvConfig {
   directoryHierarchy = "Boolean" | false
 }
 
-io.simbenchCodes = ["String"]
-io.input {
-  download.baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
-  download.folder = "String" | "inputData/download/"
-  download.failOnExistingFiles = "Boolean" | false
-  csv = CsvConfig
+io {
+  simbenchCodes = ["String"]
+  input {
+    download.baseUrl = "String" | "http://141.51.193.167/simbench/gui/usecase/download"
+    download.folder = "String" | "inputData/download/"
+    download.failOnExistingFiles = "Boolean" | false
+    csv = CsvConfig
+  }
+  output {
+    csv = CsvConfig
+    targetFolder = "String" | "convertedData"
+    compress = "Boolean" | true
+  }
 }
-io.output.csv = CsvConfig
-io.output.targetFolder = "String" | "convertedData"
-io.output.compress = "Boolean" | true
+conversion {
+  removeSwitches = "Boolean" | false
+}
