--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ ext {
 }
 
 group = 'com.github.ie3-institute'
-description = 'simbench4ie3'
+description = 'simbench2psdm'
 version = '1.1-SNAPSHOT'
 sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
