Resolving reviewers comments

--- a/inputData/config/mvLvNoSwitches.conf
+++ b/inputData/config/mvLvNoSwitches.conf
@@ -1,4 +1,4 @@
-# Simple config to convert all extra high voltage grids
+# Simple config to convert all models that comprise mv and lv -- either single or connected
 io {
   input {
     csv = {
