--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,12 @@ dependencies {
 	testImplementation "org.pegdown:pegdown:1.6.0" // HTML report for scalatest
 	implementation 'org.mockito:mockito-core:3.11.2' // mocking framework
 
+	// akka actor system //
+	implementation platform("com.typesafe.akka:akka-bom_${scalaVersion}:2.6.14")
+	implementation "com.typesafe.akka:akka-actor-typed_${scalaVersion}"
+	implementation "com.typesafe.akka:akka-stream_${scalaVersion}"
+	testImplementation "com.typesafe.akka:akka-actor-testkit-typed_${scalaVersion}"
+
 	// config //
 	implementation 'com.typesafe:config:1.4.1'
 	implementation "com.github.carueda:tscfg_2.13:${tscfgVersion}"
