Adapt config class

--- a/inputData/config/multiVoltLvlNoSwitches.conf
+++ b/inputData/config/multiVoltLvlNoSwitches.conf
@@ -19,6 +19,7 @@ io {
 
     targetFolder = "convertedData/multiVoltLvlNoSwitches"
     compress = true
+    workers = 20
   }
   
   simbenchCodes = [
@@ -111,4 +112,9 @@ io {
     "1-MVLV-urban-all-1-no_sw",
     "1-MVLV-urban-all-2-no_sw"
   ]
+}
+
+conversion {
+  removeSwitches = false
+  participantWorkersPerType = 20
 }
