--- a/inputData/config/mvLvNoSwitches.conf
+++ b/inputData/config/mvLvNoSwitches.conf
@@ -19,6 +19,7 @@ io {
 
     targetFolder = "convertedData/mvLvNoSwitches"
     compress = true
+    workers = 20
   }
   
   simbenchCodes = [
@@ -106,4 +107,5 @@ io {
 
 conversion {
   removeSwitches = true
+  participantWorkersPerType = 20
 }
