--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -18,6 +18,7 @@ io {
     csv = CsvConfig
     targetFolder = "String" | "convertedData"
     compress = "Boolean" | true
+    workers = "Int" | 20
   }
 }
 conversion {
