--- a/inputData/config/singleVoltLvlNoSwitches.conf
+++ b/inputData/config/singleVoltLvlNoSwitches.conf
@@ -19,6 +19,7 @@ io {
 
     targetFolder = "convertedData/singleVoltLvlNoSwitches"
     compress = true
+    workers = 20
   }
   
   simbenchCodes = [
@@ -62,4 +63,9 @@ io {
     "1-MV-urban--1-no_sw",
     "1-MV-urban--2-no_sw"
   ]
+}
+
+conversion {
+  removeSwitches = false
+  participantWorkersPerType = 20
 }
