--- a/inputData/config/smallGrid.conf
+++ b/inputData/config/smallGrid.conf
@@ -19,9 +19,15 @@ io {
 
     targetFolder = "convertedData/smallGrid"
     compress = false
+    workers = 20
   }
   
   simbenchCodes = [
     "1-LV-rural1--1-sw"
   ]
+}
+
+conversion {
+  removeSwitches = false
+  participantWorkersPerType = 20
 }
