Improve logging in test

--- a/build.gradle
+++ b/build.gradle
@@ -106,3 +106,7 @@ wrapper {
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
+
+tasks.withType(Javadoc){
+	options.encoding = 'UTF-8'
+}
