--- a/src/main/resources/config-template.conf
+++ b/src/main/resources/config-template.conf
@@ -24,4 +24,5 @@ io {
 conversion {
   removeSwitches = "Boolean" | false
   participantWorkersPerType = "Int" | 20
+  createTimeSeries = "Boolean" | false
 }
