Setting up the thread pool to be used by akka

--- a/inputData/config/mvLvNoSwitches.conf
+++ b/inputData/config/mvLvNoSwitches.conf
@@ -1,3 +1,5 @@
+include "common/akka.conf"
+
 # Simple config to convert all models that comprise mv and lv -- either single or connected
 io {
   input {
