--- a/inputData/config/singleVoltLvlNoSwitches.conf
+++ b/inputData/config/singleVoltLvlNoSwitches.conf
@@ -1,3 +1,5 @@
+include "common/akka.conf"
+
 # Simple config to convert all data sets with one voltage level only and without switches and dc lines
 io {
   input {
