Read in Storages

--- a/inputData/config/mvLvNoSwitches.conf
+++ b/inputData/config/mvLvNoSwitches.conf
@@ -111,5 +111,5 @@ io {
 conversion {
   removeSwitches = true
   participantWorkersPerType = 5
-  createTimeSeries = true
+  createTimeSeries = false
 }
