--- a/build.gradle
+++ b/build.gradle
@@ -48,20 +48,22 @@ dependencies {
 	/* PowerSystemDataModel */
 	implementation ('com.github.ie3-institute:PowerSystemDataModel:2.1-SNAPSHOT') {
 		/* Exclude nested logging and ie3 related dependencies */
-		exclude group: 'org.slf4j', module: 'slf4j-api'
+		exclude group: 'org.slf4j'
 		exclude group: 'com.github.ie3-institute'
 	}
 
 	/* util functions */
 	implementation ('com.github.ie3-institute:PowerSystemUtils:1.6-SNAPSHOT') {
 		/* Exclude nested logging and ie3 related dependencies */
-		exclude group: 'org.slf4j', module: 'slf4j-api'
+		exclude group: 'org.slf4j'
 		exclude group: 'com.github.ie3-institute'
 	}
 
 	implementation 'org.codehaus.groovy:groovy:3.0.8'
 
 	implementation 'tech.units:indriya:2.1.2'
+	implementation 'org.locationtech.jts:jts-core:1.18.2'
+	implementation 'commons-io:commons-io:2.11.0'
 
 	// logging
 	implementation 'org.apache.logging.log4j:log4j-api:+' // log4j
