--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,10 +8,10 @@ updates:
     open-pull-requests-limit: 10
     target-branch: master
     reviewers:
-      - ckittl
-      - johanneshiry
       - t-ober
       - sensarmad
+      - sebastian-peter
+      - danielfeismann
     ignore:
       - dependency-name: org.jgrapht:jgrapht-core
         versions:
