--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
       interval: daily
       time: "05:00"
     open-pull-requests-limit: 10
-    target-branch: master
+    target-branch: main
     reviewers:
       - t-ober
       - sensarmad
