--- a/inputData/config/smallGrid.conf
+++ b/inputData/config/smallGrid.conf
@@ -14,7 +14,7 @@ io {
       fileEncoding = "UTF-8"
       fileEnding = ".csv"
       separator = ";"
-      directoryHierarchy = true
+      directoryHierarchy = false
     }
 
     targetFolder = "convertedData/smallGrid"
@@ -22,6 +22,6 @@ io {
   }
   
   simbenchCodes = [
-    "1-LV-rural1--1-sw"
+    "1-MV-urban--1-no_sw"
   ]
 }
