--- a/inputData/config/mvWithSwitches.conf
+++ b/inputData/config/mvWithSwitches.conf
@@ -18,7 +18,7 @@ io {
     }
 
     targetFolder = "convertedData/mvLvNoSwitches"
-    compress = true
+    compress = false
   }
   
   simbenchCodes = [
@@ -28,11 +28,11 @@ io {
 //    "1-MV-comm--2-sw",
 
 //    "1-MV-rural--0-sw",
-//    "1-MV-rural--0-no_sw",
+    "1-MV-rural--0-no_sw",
 
 //    "1-MV-rural--1-sw",
 //    "1-MV-rural--2-sw",
-    "1-MV-semiurb--0-no_sw",
+//    "1-MV-semiurb--0-no_sw",
 //    "1-MV-semiurb--1-sw",
 //    "1-MV-semiurb--2-sw",
 //    "1-MV-urban--0-sw",
@@ -42,5 +42,5 @@ io {
 }
 
 conversion {
-  removeSwitches = true
+  removeSwitches = false
 }
